# xesskey

./: .gitignore  .gitmodules  .prototools  package-lock.json  package.json
.agent/skills/create-skill/: SKILL.md
.agent/skills/create-skill/references/: coverage-loop.md
.github/workflows/: actions-lock.json  actions.json  ci.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/src/: ci.ts
.moon/: toolchain.yml  workspace.yml
docs/plan/: phase1.md  phase2.md  phase3.md
xq-sns-app/: Cargo.toml  docker-compose.yml  moon.yml
xq-sns-app/config/: development.yaml  test.yaml
xq-sns-app/examples/: playground.rs
xq-sns-app/frontend/: moon.yml  package-lock.json  package.json
xq-sns-app/frontend/src/: index.css
xq-sns-app/migration/src/: lib.rs  m20240205_000001_create_actors.rs  m20240205_000002_create_activities.rs  m20240205_000003_create_follows.rs
xq-sns-app/src/: app.rs
xq-sns-app/src/controllers/: activitypub.rs  mod.rs  webfinger.rs
xq-sns-app/src/models/: activities.rs  actors.rs  follows.rs  mod.rs
xq-sns-app/src/models/_entities/: activities.rs  actors.rs  follows.rs  mod.rs  prelude.rs
xq-sns-app/tests/models/: users.rs
xq-sns-app/tests/requests/: auth.rs  prepare_data.rs
